--- a/react-query-store/package.json
+++ b/react-query-store/package.json
@@ -19,6 +19,8 @@
     "react-router-dom": "^6.14.2"
   },
   "devDependencies": {
+    "@playwright/test": "^1.55.0",
+    "@types/node": "^24.3.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
